完成上传下载

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ mapper_path=/mapper/**.xml
 entity_package=com.yzb.rfid.entity
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.html
+# 最大支持文件大小 即单个文件大小
+spring.http.multipart.max-file-size=100Mb
+# 最大支持请求大小 即一次性上传的总文件大小
+spring.http.multipart.max-request-size=100Mb
